# DevFoolYou

./: INTEGRATION_README.md  README.md  RESULTS_AI_SUMMARY_DOCS.md  setup-auth0.sh  start.sh
backend/: .env  .env.example  AI_ENDPOINTS.md  README.md  __init__.py  main.py  requirements.txt  schemas.py  start.sh
backend/core/: __init__.py  config.py  logger.py
backend/routers/: __init__.py  auth.py  bulk.py  projects.py  scraper.py  scraper_new.py  scraper_protected_example.py  similarity.py
backend/services/: __init__.py  ai_intelligence.py  auth0.py  embedding.py  mongodb.py  scraper.py
docs/: AI_INSIGHTS_DOCS.md  AI_INTELLIGENCE.md  API_DOCS.md  AUTH0_CHECKLIST.md  AUTH0_INTEGRATION_SUMMARY.md  AUTH0_README.md  AUTH0_SETUP.md  AUTH0_TROUBLESHOOTING.md  CHANGES.md  CORS_FIX.md  QUICKSTART.md  SUMMARY.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIInsights.tsx  AuthNav.tsx  LoginButton.tsx  ProtectedRoute.tsx  UserProfile.tsx  cta-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  navbar.tsx  stats-section.tsx
frontend/lib/: api.ts  auth0-provider.tsx  (+1 more)
knowledge_base_scraper/: README_USAGE.md  atlasTable.py  csvToAtlas.py  generate_and_update_embeddings.py  projects_data.csv
scraper/: README.md  embeddings.csv  failed_projects.txt  projects_data.csv  pyproject.toml  requirements.txt
scraper/devfolio_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scraper/scraper/: __init__.py  cli.py  config.py  logger.py  parser.py  scroll.py  storage.py
(+7 files in other folders)
